# LuceeFormat

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.md
src/: ast.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty_print.rs  visitor.rs
tests/: if_statements.rs
tests/common/: mod.rs
