[package]
name = "fusion_formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fusion_formatter"
path = "src/main.rs"

[lib]
name = "fusion_formatter"
path = "src/lib.rs"

[dependencies]
phf = { version = "0.11", features = ["macros"] }