[package]
name = "fusion_formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fusionfmt"
path = "src/main.rs"

[lib]
name = "fusion_formatter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
