[package]
name = "LuceeFormat"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "luceefmt"
path = "src/main.rs"

[lib]
name = "fusion_formatter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.10"
